# sena-lang

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.html  README.md  TODO.md  a.mh  index.html  playground-a7e497d5d2f1fa22.js  playground-a7e497d5d2f1fa22_bg.wasm  prelude.mh  styles-14137ffdc8a50dda.css  sudoku.hs  syntax.bnf  syntax.enbf  test.hs  test.ts  vector.ts
.github/workflows/: build.yml
codegen/: clang.c  javascript.js  javascript.ts
core/: Cargo.toml
core/src/: lib.rs
core/src/checker/: error.rs  mod.rs  object.rs
core/src/env/: error.rs  mod.rs
core/src/evaluator/: error.rs  mod.rs  object.rs
core/src/lexer/: error.rs  mod.rs  token.rs
core/src/parser/: ast.rs  (+3 more)
demo/: demo.ma  demo.mh  demo.tk  fibonaci.mh  fibonacii.mh  infix.mh  list.mh  main.ma  main.mh  main.tk  match.mh  sudoku.mh
extension/: README.md  language-configuration.json  mihama-language-0.1.0.vsix  package.json
extension/syntaxes/: ma.tmLanguage.json  mihama.tmLanguage.json
icon/: mihama.psd
pkgs/ts/: package.json
playground/: Cargo.toml  Trunk.toml  index.html
playground/public/: styles.scss
playground/src/: example.rs  lib.rs  main.rs  utils.rs
src/: ast.rs  lexer.rs  lexer2.rs  lib.rs  main.rs  parser.rs  token.rs
src/checker/: ast.rs  error.rs  mod.rs  object.rs
src/cli/: mod.rs
src/common/: env.rs
src/env/: mod.rs
src/evaluator/: env.rs  error.rs  mod.rs  object.rs
src/lexer/: error.rs  mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/repl/: mod.rs
src/transpiler/: traits.rs
src/utils/: mod.rs
ttt/: Cargo.toml
ttt/src/: lib.rs
(+9 files in other folders)
