[package]
name = "mihama"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["functional", "dependent-type", "language", "type-theory", "parser"]
readme = "README.md"
authors = ["Arimura Sena <me@hotaru.icu>"]
repository = "https://github.com/BIYUEHU/mihama"
description = "A Modern Functional and Dependent Type Programming Language Base on Rust"

[dependencies]
